[package]
name = "star-his"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.0", features = ["full"] }
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
