[package]
name = "star-his"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.0", features = ["full"] }
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
